# ApiMorse

./: build.sh  db.sqlite3  manage.py  pyproject.toml
ApiMorse/: asgi.py  settings.py  urls.py  wsgi.py
ApiMorse/apps/api/: apps.py  views.py
