[tool.poetry]
name = "apimorse"
version = "0.1.0"
description = ""
authors = ["josue <urgosxd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
pillow = "^9.3.0"
djangorestframework = "^3.14.0"
pymongo = "^4.3.3"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
